# ResQrypt

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rustfmt.toml
.github/workflows/: ci.yml  docker.yml  release.yml
src/: cli.rs  error.rs  lib.rs  main.rs
src/archive/: mod.rs  tar.rs
src/commands/: decrypt.rs  encrypt.rs  mod.rs
src/compression/: detect.rs  mod.rs  zstd.rs
src/crypto/: aes.rs  format.rs  kdf.rs  mod.rs
src/utils/: mod.rs  progress.rs
